[project]
name = "networksecurity"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.11.12",
    "dagshub>=0.6.3",
    "fastapi>=0.121.3",
    "mlflow<3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyaml>=25.7.0",
    "pymongo[srv]>=4.15.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
